--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9, 3.10, 3.11]  # Python versions to test
+        python-version: [3.7, 3.8, 3.9, 3.10, 3.11]  # Python versions to test
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
